# gemclaw

./: .gitignore  DEVELOPMENT.md  README.md  SPEC.md  pyproject.toml  test_with_claude.sh
gemclaw/: __init__.py  claude_manager.py  cli.py  proxy.py  translator.py  utils.py
tests/: test_final_verification.py  test_integration_e2e.py  test_translator.py
