[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gemclaw"
version = "0.1.0"
description = "Full-featured Gemini API proxy for Claude Code"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "GemClaw", email = "dev@gemclaw.local"}
]
license = {text = "MIT"}

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "colorama>=0.4.6",
    "aiofiles>=23.0.0",
    "google-genai>=1.73.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.scripts]
gemclaw = "gemclaw.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["gemclaw"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py310"
